# Fyre

./: AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  Makefile.win32  README  TODO  acinclude.m4  autogen.sh  color-button.c  color_button.c  color_button.h  configure.ac  de_jong_explorer.c  fyre.desktop  main.c
autopackage/: default.apspec.in
contrib/: Makefile.am  cluster-utils.sh  fyre.fedora-initscript  fyre.gentoo-initscript  fyre.spec  fyre.ubuntu-initscript  fyre_remote.py
contrib/fink/: fyre.info
contrib/fyre.macosx-initscript/: README
contrib/fyre.macosx-initscript/fyre/: StartupParameters.plist  fyre
contrib/portage/media-gfx/fyre/: Manifest  fyre-0.9.ebuild  fyre-1.0.0.ebuild
contrib/portage/media-gfx/fyre/files/: digest-fyre-0.9  digest-fyre-1.0.0  fyre-0.9-initscript.diff  fyre-0.9-nomimeupdates.diff  fyre-1.0.0-initscript.diff  fyre-1.0.0-nomimeupdates.diff
contrib/win32/: fyre.nsi  fyre.rc
data/: Makefile.am  about-box.fa  animation-render.glade  de-jong-explorer.glade  explorer.glade  fyre-fa.desktop  fyre-fa.desktop.in  fyre-png.desktop  fyre-png.desktop.in  fyre.desktop  fyre.desktop.in  fyre.keys  fyre.keys.in  fyre.xml  x-fyre-animation.xml
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/scalable/: Makefile.am
po/: POTFILES.in
src/: Makefile.am  animation-render-ui.c  animation-render-ui.h  animation.c  animation.h  avi-writer.c  avi-writer.h  batch-image-render.c  batch-image-render.h  bifurcation-diagram.c  bifurcation-diagram.h  cell-editable-table.c  cell-editable-table.h  cell-renderer-bifurcation.c  cell-renderer-bifurcation.h  cell-renderer-transition.c  cell-renderer-transition.h  chunked-file.c  chunked-file.h  cluster-model.c  cluster-model.h  color-button.c  color-button.h  curve-editor.c  curve-editor.h  de-jong-render.c  de-jong.c  de-jong.h  discovery-client.c  discovery-client.h  discovery-server.c  discovery-server.h  explorer-about.c  explorer-animation.c  explorer-cluster.c  explorer-history.c  explorer-tools.c  explorer.c  explorer.h  exr.cpp  (+43 more)
src/platform/: getopt.c  getopt.h
web/: about.shtml  index.shtml  navigation.inc  style.css
